     ``doc/developers/development-repo.txt`` has detailed information.
     (Robert Collins)

  FEATURES:

  IMPROVEMENTS:

  BUGFIXES:

    * Include quick-start-summary.svg file to python-based installer(s)
      for Windows (#192924, Alexander Belchenko)

  API BREAKS:

  TESTING:

    * ``bzrlib.tests.adapt_tests`` was broken and unused - it has been fixed.
      (Robert Collins)

  INTERNALS:

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 
    * Repository formats have a new supported-feature attribute
      ``supports_external_lookups`` used to indicate repositories which support
      falling back to other repositories when they have partial data.
      (Robert Collins)

    * The bzrdir format registry now accepts an ``alias`` keyword to
      register_metadir, used to indicate that a format name is an alias for
      some other format and thus should not be reported when describing the
      format. (Robert Collins)


bzr 1.2rc1 (not released yet)
-----------------------------

  NOTES WHEN UPGRADING:
  
    * Fetching via the smart protocol may need to reconnect once during a fetch
      if the remote server is running Bazaar 1.1 or earlier, because the client
      attempts to use more efficient requests that confuse older servers.  You
      may be required to re-enter a password or passphrase when this happens.
      This won't happen if the server is upgraded to Bazaar 1.2.
      (Andrew Bennetts)

  CHANGES:

    * Fetching via bzr+ssh will no longer fill ghosts by default (this is
      consistent with pack-0.92 fetching over SFTP). (Robert Collins)

    * Formatting of ``bzr plugins`` output is changed to be more human-
      friendly. Full path of plugins locations will be shown only with